# Emotion-detection-with-Python-OpenCV-and-Scikit-Learn

./: README.md  data.txt  model  prepare_data.py  pyproject.toml  test_model.py  train_model.py
